compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/FieldWithoutName2.java
public final class Foo /* Foo*/ {
  @org.jetbrains.annotations.NotNull()
  private final java.lang.String name;

  @org.jetbrains.annotations.NotNull()
  public final java.lang.String getName();//  getName()

  public  Foo(@org.jetbrains.annotations.NotNull() java.lang.String, error.NonExistentClass);//  .ctor(java.lang.String, error.NonExistentClass)
}
